--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "kykvit blog",
+  "name": "Log of various computer things that I've been doing",
   "icons": [
     {
       "src": "favicon.ico",
